--- a/Public/integrations/365-crm.rst
+++ b/Public/integrations/365-crm.rst
@@ -14,10 +14,11 @@ MS Power Automate
 --------------------------------------------------
 Add records, such as leads and contacts, to Microsoft Dynamics 365 CRM when someone submits Plumsail Form with |MS Power Automate| and |Common Data Service Flow| connector.
 
-|flow process img|
+|flowTemplateImg|
 
-.. |flow process img| image:: ../images/integration/365-crm/integration-365-crm-flow-process.png
-   :alt: Flow process
+.. |flowTemplateImg|  raw:: html
+
+      <a href="https://emea.flow.microsoft.com/en-us/galleries/public/templates/3364a6a63bb04cc290204660412bcf9b/create-a-record-in-dynamics-365-crm-when-a-plumsail-form-is-submitted" target="_blank" class="img-link public-integration"><img src="../_static/img/integration/365-crm/integration-365-crm-flow.png">Create a record in Dynamics 365 CRM when a Plumsail form is submitted</a>
 
 .. |MS Power Automate|  raw:: html
 
